Update 1641. Count Sorted Vowel Strings.md

--- a/leetcode/dynamic programming/1641. Count Sorted Vowel Strings.md
+++ b/leetcode/dynamic programming/1641. Count Sorted Vowel Strings.md
@@ -12,6 +12,8 @@ n=3일 때 각 경우의 수는 [15,10,6,3,1]이다.
 
 그림으로 그려보면 직전의 열, 직전의 행을 더한 값들로 구성됨을 알 수 있다. 사용이 편하도록 순서를 거꾸로 해봤다.
 
+![SmartSelect_20231017-160357_Samsung Notes](https://github.com/hamelln/algorithm-test/assets/39308313/943ebd5f-9924-4bcf-8d11-037aac0b6153)
+
 ```js
 var countVowelStrings = function (n) {
   if (n === 1) return 5;
